--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Thibault Garel (2024).
+GALICS stable version based on the local "theselike_GalaxyMaker-svn" version.
+(Garel et al. 2016)
 
 - IDL Library
 ==============
